[package]
name = "tmkms-light"
version = "0.1.0"
authors = ["Tomas Tauber <2410580+tomtau@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anomaly = "0.2"
ed25519-dalek = "1"
prost = "0.6"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
tendermint = { version = "=0.17.0-rc3" }
tendermint-proto = "=0.17.0-rc3"
tendermint-p2p = { version = "=0.17.0-rc3" }
thiserror = "1"
tracing = "0.1"