[package]
name = "tmkms-light"
version = "0.1.2"
authors = ["Tomas Tauber <2410580+tomtau@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anomaly = "0.2"
ed25519-dalek = "1"
prost = "0.7"
serde = { version = "1", features = ["serde_derive"] }
subtle-encoding = { version = "0.5", features = ["bech32-preview"] }
tendermint = { version = "0.18" }
tendermint-proto = "0.18"
tendermint-p2p = { version = "0.18" }
thiserror = "1"
tracing = "0.1"

[workspace]
members = ["providers/softsign", "providers/sgx/sgx-app", "providers/sgx/sgx-runner", "providers/nitro/nitro-enclave", "providers/nitro/nitro-helper"]
default-members = ["providers/softsign"]