[package]
name = "tmkms-light"
version = "0.3.0"
authors = ["Tomas Tauber <2410580+tomtau@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = "1"
flex-error = "0.4"
prost = "0.9"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
subtle-encoding = { version = "0.5", features = ["bech32-preview"] }
tendermint = { version = "0.23" }
tendermint-proto = "0.23"
tendermint-p2p = { version = "0.23" }
thiserror = "1"
tracing = "0.1"

[workspace]
members = ["providers/softsign", "providers/sgx/sgx-app", "providers/sgx/sgx-runner", "providers/nitro/nitro-enclave", "providers/nitro/nitro-helper"]
default-members = ["providers/softsign"]

[patch.crates-io]
# TODO: use upstream when this is merged: https://github.com/dalek-cryptography/ed25519-dalek/pull/160 
ed25519-dalek = { git = "https://github.com/crypto-com/ed25519-dalek", rev = "5e6c9362ff33c2bbfe189a55e44fd2d68b463227" }