[tool.poetry]
name = "integration-test"
version = "0.1.0"
description = ""
authors = ["Tomas Tauber <2410580+tomtau@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fire = {git = "https://github.com/google/python-fire.git"}
tomlkit = "^0.7.0"
jsonmerge = "^1.7.0"
supervisor = "^4.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
