[package]
name = "tmkms-softsign"
version = "0.3.0"
authors = ["Tomas Tauber <2410580+tomtau@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anomaly = "0.2"
ed25519-dalek = "1"
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
structopt = "0.3"
subtle = "2"
subtle-encoding = { version = "0.5", features = ["bech32-preview"] }
tempfile = "3"
tendermint = "0.23"
tendermint-config = "0.23"
tendermint-p2p = "0.23"
tmkms-light = { path = "../.." }
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.5"
zeroize = "1"
