[package]
name = "tmkms-nitro-enclave"
version = "0.2.0"
authors = [ "Tomas Tauber <2410580+tomtau@users.noreply.github.com>" ]
edition = "2018"

[dependencies]
anomaly = "0.2"
aws-ne-sys = "0.4"
ed25519-dalek = "1"
nix = "0.22"
nsm-io = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api", rev="34bad95f97f8c83a844e1db8695e91552b1aa9f3" }
nsm-driver = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api", rev="34bad95f97f8c83a844e1db8695e91552b1aa9f3" }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"]}
serde_bytes = "0.11"
serde_json = "1"
subtle = "2"
subtle-encoding = "0.5"
tendermint = { version = "0.21" }
tendermint-p2p = { version = "0.21" }
tmkms-light = { path = "../../.." }
tmkms-nitro-helper = { path = "../nitro-helper", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.2"
vsock = "0.2"
zeroize = "1"
