[package]
name = "tmkms-nitro-enclave"
version = "0.4.1"
authors = ["Tomas Tauber <2410580+tomtau@users.noreply.github.com>"]
edition = "2021"

[dependencies]
aws-ne-sys = "0.4"
aws-nitro-enclaves-nsm-api = "0.2"
ed25519-dalek = "1"
flex-error = "0.4"
nix = "0.25"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
serde_bytes = "0.11"
serde_json = "1"
subtle = "2"
subtle-encoding = "0.5"
tendermint = "0.23"
tendermint-p2p = "0.23"
tmkms-light = { path = "../../.." }
tmkms-nitro-helper = { path = "../nitro-helper", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
vsock = "0.3"
zeroize = "1"
