[package]
name = "tmkms-nitro-helper"
version = "0.3.0"
authors = [ "Tomas Tauber <2410580+tomtau@users.noreply.github.com>" ]
edition = "2021"

[features]
default = ["main"]
main = ["sysinfo", "reqwest"]

[dependencies]
anomaly = "0.2"
bytes = "= 0.5"
ctrlc = "3"
chrono = "0.4"
ed25519 = { version = "1", features = [ "serde" ] }
ed25519-dalek = "1"
nix = "0.23"
rand_core = { version = "0.6", features = [ "std" ] }
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true}
secrecy = { version = "0.7", features = ["alloc", "serde"] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
structopt = "0.3"
subtle-encoding = { version = "0.5", features = [ "bech32-preview" ] }
sysinfo = { version = "0.24", optional = true }
tempfile = "3"
tendermint = "0.23"
tendermint-config = "0.23"
thiserror = "1"
tmkms-light = { path = "../../.." }
tokio = { version = "1", features = [ "rt" ] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-core = "0.1"
vsock = "0.2"
