[package]
name = "tmkms-nitro-helper"
version = "0.4.1"
authors = [ "Tomas Tauber <2410580+tomtau@users.noreply.github.com>" ]
edition = "2021"

[dependencies]
aws-config = "0.51"
aws-types = "0.51"
ctrlc = "3"
ed25519-dalek = "1"
flex-error = "0.4"
nix = "0.26"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
clap = {version = "4", features = ["derive"] }
subtle-encoding = { version = "0.5", features = [ "bech32-preview" ] }
sysinfo = "0.27"
tempfile = "3"
tendermint = "0.27"
tendermint-config = "0.27"
tmkms-light = { path = "../../.." }
tokio = { version = "1", features = [ "rt" ] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-core = "0.1"
vsock = "0.3"