[package]
name = "tmkms-light-sgx-app"
version = "0.1.0"
authors = ["Tomas Tauber <2410580+tomtau@users.noreply.github.com>", "Linfeng Yuan <linfeng@crypto.com>"]
edition = "2018"

[target.'cfg(target_env = "sgx")'.dependencies]
anomaly = "0.2"
ed25519-dalek = "1"
rand = "0.7"
aes-gcm-siv = "0.9"
subtle = "2"
sgx-isa = { version = "0.3", features = ["sgxstd"] }
zeroize = "1"
tendermint-p2p = { version = "0.17" }
serde_json = "1"
tmkms-light-sgx-runner = { path = "../sgx-runner" }
tmkms-light = { path = "../../.." }
tracing = "0.1"
tracing-subscriber = "0.2"