[package]
name = "tmkms-light-sgx-app"
version = "0.1.2"
authors = ["Tomas Tauber <2410580+tomtau@users.noreply.github.com>", "Linfeng Yuan <linfeng@crypto.com>"]
edition = "2018"

[target.'cfg(target_env = "sgx")'.dependencies]
aes-gcm-siv = "0.9"
anomaly = "0.2"
ed25519-dalek = "1"
rand = "0.7"
secrecy = "0.7"
serde_json = "1"
sgx-isa = { version = "0.3", features = ["sgxstd"] }
subtle = "2"
subtle-encoding = "0.5"
tendermint-p2p = "0.19"
tmkms-light-sgx-runner = { path = "../sgx-runner" }
tmkms-light = { path = "../../.." }
tracing = "0.1"
tracing-subscriber = "0.2"
zeroize = "1"