[package]
name = "tmkms-light-sgx-app"
version = "0.3.0"
authors = ["Tomas Tauber <2410580+tomtau@users.noreply.github.com>", "Linfeng Yuan <linfeng@crypto.com>"]
edition = "2021"

[target.'cfg(target_env = "sgx")'.dependencies]
aes = "0.8"
aes-gcm-siv = "0.10"
anomaly = "0.2"
base64 = "0.13"
ed25519-dalek = "1"
rand = "0.8"
rsa = "0.5"
serde_json = "1"
sha2 = "0.9"
sgx-isa = { version = "0.3", features = ["sgxstd"] }
subtle = "2"
subtle-encoding = "0.5"
tendermint-p2p = "0.23"
tmkms-light-sgx-runner = { path = "../sgx-runner" }
tmkms-light = { path = "../../.." }
tracing = "0.1"
tracing-subscriber = "0.2"
zeroize = "1"

[dev-dependencies]
aes-keywrap-rs = "0.2"
quickcheck = "1"
quickcheck_macros = "1"
