[package]
name = "tmkms-light-sgx-runner"
version = "0.1.0"
authors = ["Tomas Tauber <2410580+tomtau@users.noreply.github.com>", "Linfeng Yuan <linfeng@crypto.com>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
ed25519 = { version = "1", features = ["serde"] }
sgx-isa = "0.3"
thiserror = "1"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
aesm-client = { version = "0.5", features = ["sgxs"] }
enclave-runner = "0.4"
sgxs-loaders = "0.3"
tokio = { version = "= 0.2", features = ["uds"] }