[package]
name = "tmkms-light-sgx-runner"
version = "0.1.1"
authors = ["Tomas Tauber <2410580+tomtau@users.noreply.github.com>", "Linfeng Yuan <linfeng@crypto.com>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
ed25519 = { version = "1", features = ["serde"] }
ed25519-dalek = "1"
sgx-isa = "0.3"
thiserror = "1"
tendermint = { version = "0.17" }
tmkms-light = { path = "../../.." }
secrecy = { version = "0.7" }
zeroize = "1"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
anomaly = "0.2"
aesm-client = { version = "0.5", features = ["sgxs"] }
enclave-runner = "0.4"
serde_json = "1"
sgxs-loaders = "0.3"
structopt = "0.3"
subtle-encoding = { version = "0.5", features = ["bech32-preview"] }
tempfile = "3"
tokio = { version = "= 0.2", features = ["uds"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
